added amplication-kafka as implicit dependency of git-pull-request-service

--- a/packages/amplication-git-pull-request-service/project.json
+++ b/packages/amplication-git-pull-request-service/project.json
@@ -5,7 +5,8 @@
   "projectType": "application",
   "implicitDependencies": [
     "amplication-nest-logger-module",
-    "amplication-git-utils"
+    "amplication-git-utils",
+    "amplication-kafka"
   ],
   "targets": {
     "lint": {
