--- a/packages/amplication-code-gen-types/project.json
+++ b/packages/amplication-code-gen-types/project.json
@@ -1,13 +1,16 @@
 {
   "name": "amplication-code-gen-types",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": ["packages/amplication-code-gen-types/src"],
+  "sourceRoot": [
+    "packages/amplication-code-gen-types/src"
+  ],
   "projectType": "library",
-
   "targets": {
     "prebuild": {
       "executor": "nx:run-commands",
-      "outputs": ["{projectRoot}/src/types"],
+      "outputs": [
+        "{projectRoot}/src/types"
+      ],
       "options": {
         "command": "ts-node -P tsconfig.lib.json ./scripts/generate-types",
         "cwd": "packages/amplication-code-gen-types"
@@ -15,27 +18,41 @@
     },
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": ["{options.outputPath}"],
-      "dependsOn": ["prebuild"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
+      "dependsOn": [
+        "prebuild"
+      ],
       "options": {
         "outputPath": "dist/packages/amplication-code-gen-types",
         "tsConfig": "packages/amplication-code-gen-types/tsconfig.lib.json",
         "packageJson": "packages/amplication-code-gen-types/package.json",
         "main": "packages/amplication-code-gen-types/src/index.ts",
-        "assets": ["packages/amplication-code-gen-types/*.md"]
+        "assets": [
+          "packages/amplication-code-gen-types/*.md"
+        ]
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["packages/amplication-code-gen-types/**/*.ts"]
+        "lintFilePatterns": [
+          "packages/amplication-code-gen-types/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/packages/amplication-code-gen-types"],
-      "dependsOn": ["prebuild"],
+      "outputs": [
+        "coverage/packages/amplication-code-gen-types"
+      ],
+      "dependsOn": [
+        "prebuild"
+      ],
       "options": {
         "jestConfig": "packages/amplication-code-gen-types/jest.config.ts",
         "passWithNoTests": true
