switch client & design system to nx

--- a/packages/amplication-design-system/tsconfig.json
+++ b/packages/amplication-design-system/tsconfig.json
@@ -9,8 +9,10 @@
     "strict": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   },
+  "exclude": ["node_modules"],
   "files": [],
   "include": [],
   "references": [
