--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@sendgrid/mail": "^7.7.0",
     "@slynova/flydrive": "^1.0.3",
     "@slynova/flydrive-gcs": "^1.0.3",
+    "@swc/core": "^1.3.11",
     "adm-zip": "^0.5.9",
     "ajv": "^6.12.6",
     "analytics-node": "^4.0.1",
@@ -86,8 +87,6 @@
     "prisma-schema-dsl": "^1.1.5",
     "query-string": "^7.1.1",
     "rc": "^1.2.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rimraf": "^3.0.2",
@@ -110,8 +109,8 @@
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.7",
     "@nrwl/eslint-plugin-nx": "14.8.2",
-    "@nrwl/jest": "^14.8.2",
-    "@nrwl/js": "^14.8.2",
+    "@nrwl/jest": "14.8.2",
+    "@nrwl/js": "14.8.2",
     "@nrwl/linter": "14.8.2",
     "@nrwl/nest": "^14.8.2",
     "@nrwl/node": "^14.8.2",
@@ -120,7 +119,7 @@
     "@nrwl/web": "^14.8.2",
     "@nrwl/workspace": "^14.8.2",
     "@nx-tools/nx-docker": "^3.0.4",
-    "@testing-library/react": "13.4.0",
+    "@testing-library/react": "^12.1.5",
     "@types/adm-zip": "^0.4.34",
     "@types/bcrypt": "^5.0.0",
     "@types/cron": "^1.7.3",
@@ -146,8 +145,8 @@
     "@types/pluralize": "^0.0.29",
     "@types/query-string": "^6.3.0",
     "@types/rc": "^1.2.1",
-    "@types/react": "18.0.20",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/react-transition-group": "^4.4.2",
     "@types/semver": "^7.3.9",
     "@types/supertest": "^2.0.12",
@@ -181,6 +180,8 @@
     "nx": "^14.8.2",
     "prettier": "^2.7.1",
     "prisma": "^3.15.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-test-renderer": "18.2.0",
     "react-transition-group": "4.4.2",
     "semver": "^7.3.7",
