--- a/packages/amplication-client/package.json
+++ b/packages/amplication-client/package.json
@@ -20,15 +20,13 @@
     "lodash": "4.17.21",
     "pluralize": "8.0.0",
     "query-string": "7.1.1",
-    "react": "16.14.0",
     "react-beautiful-dnd": "13.1.0",
-    "react-command-palette": "0.13.0-0",
-    "react-compound-timer": "1.2.0",
+    "react-command-palette": "^0.21.1",
+    "react-compound-timer": "^1.2.0",
     "react-device-detect": "1.17.0",
     "react-diff-viewer": "3.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "16.14.0",
     "react-draggable": "4.4.3",
     "react-dropzone": "11.3.4",
     "react-helmet": "6.1.0",
