--- a/packages/amplication-design-system/package.json
+++ b/packages/amplication-design-system/package.json
@@ -20,6 +20,7 @@
     "@mui/system": "5.10.7",
     "@primer/octicons-react": "16.2.0",
     "@primer/react": "34.7.1",
+    "@swc/core": "^1.3.11",
     "classnames": "2.3.1",
     "date-fns": "2.25.0",
     "lodash": "4.17.21",
@@ -43,7 +44,6 @@
     "@storybook/testing-library": "0.0.13",
     "@types/classnames": "2.3.1",
     "@types/lodash": "4.14.178",
-    "@types/react": "17.0.34",
     "@typescript-eslint/eslint-plugin": "5.9.1",
     "@typescript-eslint/parser": "5.9.1",
     "babel-loader": "8.2.5",
@@ -65,7 +65,6 @@
     "sass": "1.35.2",
     "sass-loader": "12.6.0",
     "style-loader": "3.3.1",
-    "typescript": "3.9.10",
     "webpack": "5.65.0"
   },
   "eslintConfig": {
@@ -78,9 +77,12 @@
       "no-duplicate-imports": "error"
     }
   },
+  "resolutions": {
+    "@types/react": "^17.0.2"
+  },
   "peerDependencies": {
     "formik": "^2.2.9",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3"
   }
