--- a/helm/charts/amplication/values-eugene.yaml
+++ b/helm/charts/amplication/values-eugene.yaml
@@ -44,14 +44,13 @@ amplication-server:
       CLIENT_HOST: "https://app-eugene.amplication-dev.com"
 
       #KAFKA
-      GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
       KAFKA_BROKERS: 'amplication-eugene-cp-kafka-headless:9092'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server-group
 
-      CREATE_PR_REQUEST_TOPIC: internal.create-pr.request.0
-      CREATE_PR_SUCCESS_TOPIC: internal.create-pr.success.0
-      CREATE_PR_FAILURE_TOPIC: internal.create-pr.failure.0
+      CREATE_PR_REQUEST_TOPIC: git.internal.create-pr.request.1
+      CREATE_PR_SUCCESS_TOPIC: git.internal.create-pr.success.1
+      CREATE_PR_FAILURE_TOPIC: git.internal.create-pr.failure.1
 
       CODE_GENERATION_REQUEST_TOPIC: internal.code-generation.request.0
       CODE_GENERATION_SUCCESS_TOPIC: internal.code-generation.success.0
@@ -125,9 +124,9 @@ amplication-git-pull-request-service:
       KAFKA_CLIENT_ID: git-pull-request-service
       KAFKA_GROUP_ID: git-pull-request-service-group
 
-      CREATE_PR_REQUEST_TOPIC: internal.create-pr.request.0
-      CREATE_PR_SUCCESS_TOPIC: internal.create-pr.success.0
-      CREATE_PR_FAILURE_TOPIC: internal.create-pr.failure.0
+      CREATE_PR_REQUEST_TOPIC: git.internal.create-pr.request.1
+      CREATE_PR_SUCCESS_TOPIC: git.internal.create-pr.success.1
+      CREATE_PR_FAILURE_TOPIC: git.internal.create-pr.failure.1
 
       BUILD_ARTIFACTS_BASE_FOLDER: /amplication-data/build-data
       BUILD_ARTIFACTS_CODE_FOLDER: code
