--- a/helm/charts/dsg-runner-infra/values/eugene.yaml
+++ b/helm/charts/dsg-runner-infra/values/eugene.yaml
@@ -19,11 +19,11 @@ amplication-build-manager:
 
       CREATE_PR_REQUEST_TOPIC: git.internal.create-pr.request.1
 
-      CODE_GENERATION_REQUEST_TOPIC: internal.code-generation.request.0
-      CODE_GENERATION_SUCCESS_TOPIC: internal.code-generation.success.0
-      CODE_GENERATION_FAILURE_TOPIC: internal.code-generation.failure.0
+      CODE_GENERATION_REQUEST_TOPIC: build.internal.code-generation.request.1
+      CODE_GENERATION_SUCCESS_TOPIC: build.internal.code-generation.success.1
+      CODE_GENERATION_FAILURE_TOPIC: build.internal.code-generation.failure.1
 
-      DSG_LOG_TOPIC: internal.dsg-log.0
+      DSG_LOG_TOPIC: build.internal.dsg-log.1
 
       DSG_RUNNER_URL: http://webhook-eventsource-svc.eugene-dsg.svc.cluster.local:12000/example
 
