--- a/helm/charts/amplication/values-next.yaml
+++ b/helm/charts/amplication/values-next.yaml
@@ -4,7 +4,7 @@ global:
     storageRequest: 5Gi
     storageName: efs-sc
   pv:
-    name: build-artifacts-eugene
+    name: build-artifacts-next
     storageCapacity: 5Gi
     handle: fs-03a0a5ba30d788595::fsap-08494d4659781878b
 
