rename service_db_name to amplication on packages that use amplication-prisma-db

--- a/ee/packages/amplication-git-push-webhook-service/.env
+++ b/ee/packages/amplication-git-push-webhook-service/.env
@@ -4,3 +4,6 @@ WEBHOOKS_SECRET_KEY = [your webhooks secret key]
 # Kafka
 KAFKA_BROKERS='localhost:9092'
 KAFKA_CLIENT_ID='amplication-git-push-webhook-service'
+
+# DB
+SERVICE_DB_NAME=amplication
