--- a/helm/charts/amplication/values-next.yaml
+++ b/helm/charts/amplication/values-next.yaml
@@ -57,7 +57,7 @@ amplication-server:
       CODE_GENERATION_SUCCESS_TOPIC: build.internal.code-generation.success.1
       CODE_GENERATION_FAILURE_TOPIC: build.internal.code-generation.failure.1
 
-      DSG_LOG_TOPIC: internal.dsg-log.0
+      DSG_LOG_TOPIC: build.internal.dsg-log.1
 
       #GCP - APPS Builder
       DEFAULT_DISK: gcs
