fix(docs): improve docs to be up to date

--- a/nx.json
+++ b/nx.json
@@ -16,6 +16,7 @@
       "runner": "@nrwl/nx-cloud",
       "options": {
         "cacheableOperations": [
+          "install",
           "prebuild",
           "build",
           "prepare",
