--- a/packages/amplication-data-service-generator/project.json
+++ b/packages/amplication-data-service-generator/project.json
@@ -5,6 +5,19 @@
   "projectType": "application",
   "implicitDependencies": ["amplication-code-gen-types"],
   "targets": {
+    "install": {
+      "executor": "nx:run-commands",
+      "inputs": [
+        "{projectRoot}/package.json",
+        "{projectRoot}/package-lock.json"
+      ],
+      "outputs": ["{projectRoot}/node_modules"],
+      "options": {
+        "commands": ["npm install"],
+        "parallel": false,
+        "cwd": "packages/amplication-data-service-generator"
+      }
+    },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "dependsOn": ["prebuild"],
