Add paths to ignore in deploy-to-next

--- a/.github/workflows/deploy-to-next.yml
+++ b/.github/workflows/deploy-to-next.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - "next"
+    paths-ignore:
+      - "**/*.md"
+      - ".all-contributorsrc"
 jobs:
   validate-image:
     runs-on: ubuntu-20.04
