--- a/packages/amplication-server/project.json
+++ b/packages/amplication-server/project.json
@@ -19,7 +19,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      
+      "dependsOn": ["^prebuild"],
       "outputs": ["coverage/packages/amplication-server"],
       "options": {
         "jestConfig": "packages/amplication-server/jest.config.ts",
