--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "dockerode": "^3.3.4",
     "dotenv": "^16.0.0",
     "eventsource": "^2.0.2",
+    "formik": "^2.2.9",
     "fs-extra": "^9.1.0",
     "get-stream": "^6.0.1",
     "glob": "^8.0.3",
