feat: add print nx version step to nx workflows

--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -48,6 +48,9 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
 
+      - name: Nx Version Print
+        run: npx nx --version
+
       - name: Nx Workspace Lint
         run: npx nx workspace-lint
 
