--- a/.github/workflows/ci-nx-all.yml
+++ b/.github/workflows/ci-nx-all.yml
@@ -38,6 +38,9 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
 
+      - name: Nx Version Print
+        run: npx nx --version
+
       - name: Nx Workspace Lint
         run: npx nx workspace-lint
 
