feat: update format funcatnality

--- a/packages/amplication-server/project.json
+++ b/packages/amplication-server/project.json
@@ -75,7 +75,7 @@
     "serve": {
       "executor": "@nrwl/node:node",
       "options": {
-        "buildTarget": "amplication-server:build",
+        "buildTarget": "amplication-server:build"
       },
       "configurations": {
         "production": {
