fix: nx ci jobs (#4326)
* fix: nx ci steps to use target branch as base

* feat: add print nx version step to nx workflows

* fix: amplication server project.json format

--- a/.github/workflows/ci-nx-all.yml
+++ b/.github/workflows/ci-nx-all.yml
@@ -20,7 +20,7 @@ jobs:
 
       - uses: nrwl/nx-set-shas@v3
         with:
-          main-branch-name: feature/nx
+          main-branch-name: ${{ github.base_ref || 'next' }}
 
       - name: Cache node modules
         id: cache
@@ -37,6 +37,9 @@ jobs:
       - name: Install Dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
+
+      - name: Nx Version Print
+        run: npx nx --version
 
       - name: Nx Workspace Lint
         run: npx nx workspace-lint
