Ignore patterns fix

--- a/packages/amplication-client/project.json
+++ b/packages/amplication-client/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "@amplication-client",
+  "name": "amplication-client",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/@amplication/client/src",
+  "sourceRoot": "packages/amplication-client/src",
   "projectType": "application",
   "implicitDependencies": [
     "amplication-design-system",
