--- a/package.json
+++ b/package.json
@@ -121,7 +121,10 @@
     "@nrwl/web": "^14.8.2",
     "@nrwl/workspace": "^14.8.2",
     "@nx-tools/nx-docker": "^3.0.4",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/adm-zip": "^0.4.34",
     "@types/bcrypt": "^5.0.0",
     "@types/cron": "^1.7.3",
