--- a/package.json
+++ b/package.json
@@ -198,7 +198,8 @@
     "ts-node": "10.9.1",
     "tsconfig-paths": "^3.14.1",
     "type-fest": "^3.1.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "yup": "^0.32.11"
   },
   "engines": {
     "node": "^16.3.0 || ^14.0.0",
