--- a/packages/amplication-client/package.json
+++ b/packages/amplication-client/package.json
@@ -44,8 +44,7 @@
     "styled-components": "5.1.1",
     "use-debounce": "3.4.3",
     "xlsx": "0.16.9",
-    "yaml": "1.10.2",
-    "yup": "0.32.11"
+    "yaml": "1.10.2"
   },
   "scripts": {
     "start": "craco start",
