revert: jest dependency update. Revert to v27

--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/glob": "^7.2.0",
     "@types/graphql-type-json": "^0.3.2",
-    "@types/jest": "28.1.1",
+    "@types/jest": "^27.0.2",
     "@types/json-schema": "^7.0.11",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
@@ -161,7 +161,7 @@
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "apollo-server-testing": "^2.25.3",
-    "babel-jest": "28.1.1",
+    "babel-jest": "^27.1.4",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
@@ -175,9 +175,9 @@
     "generate-package-json-webpack-plugin": "^2.6.0",
     "google-libphonenumber": "^3.2.31",
     "graphql": "^15.8.0",
-    "jest": "28.1.1",
+    "jest": "^27.1.4",
     "jest-diff": "^27.1.4",
-    "jest-environment-jsdom": "28.1.1",
+    "jest-environment-jsdom": "^27.1.4",
     "jest-environment-node": "^27.5.1",
     "jest-mock-extended": "^2.0.9",
     "json-schema-to-typescript": "^10.1.5",
@@ -193,7 +193,7 @@
     "semver": "^7.3.7",
     "source-map-support": "^0.5.21",
     "supertest": "^4.0.2",
-    "ts-jest": "28.0.5",
+    "ts-jest": "^27.1.4",
     "ts-loader": "^9.4.1",
     "ts-node": "10.9.1",
     "tsconfig-paths": "^3.14.1",
