--- a/packages/amplication-design-system/project.json
+++ b/packages/amplication-design-system/project.json
@@ -5,6 +5,20 @@
   "projectType": "library",
   "tags": [],
   "targets": {
+    "install": {
+        "executor": "nx:run-commands",
+        "inputs": [
+          "{projectRoot}/package.json",
+          "{projectRoot}/package-lock.json"
+        ],
+        "outputs": ["{projectRoot}/node_modules"],
+        "options": {
+          "commands": ["npm install"],
+          "parallel": false,
+          "cwd": "packages/amplication-design-system"
+        }
+      }
+    },
     "build": {
       "executor": "@nrwl/web:rollup",
       "outputs": ["{options.outputPath}"],
