fix(ci): cache node modules

--- a/.github/workflows/ci-nx-all.yml
+++ b/.github/workflows/ci-nx-all.yml
@@ -87,8 +87,12 @@ jobs:
         id: cache
         uses: actions/cache@v2
         with:
-          path: node_modules
-          key: cache-node-modules-${{ hashFiles('package-lock.json') }}
+          path: |
+            node_modules
+            packages/amplication-client/node_modules
+            packages/amplication-data-service-generator/node_modules
+            packages/amplication-design-system/node_modules
+          key: cache-node-modules-${{ hashFiles('**/package-lock.json') }}
 
       - uses: actions/setup-node@v1
         if: steps.cache.outputs.cache-hit != 'true'
