--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -98,8 +98,12 @@ jobs:
         id: cache
         uses: actions/cache@v2
         with:
-          path: node_modules
-          key: cache-node-modules-${{ hashFiles('package-lock.json') }}
+          path: |
+            node_modules
+            packages/amplication-client/node_modules
+            packages/amplication-data-service-generator/node_modules
+            packages/amplication-design-system/node_modules
+          key: cache-node-modules-${{ hashFiles('**/package-lock.json') }}
 
       - uses: actions/setup-node@v1
         if: steps.cache.outputs.cache-hit != 'true'
@@ -143,3 +147,7 @@ jobs:
           # https://www.npmjs.com/package/@nx-tools/nx-docker
           INPUT_TAGS: ${{ steps.meta.outputs.tags }}
           INPUT_PUSH: true
+
+      # trigger deploy action
+      # if target = next, env = next
+      # prov
