--- a/.github/workflows/ci-nx-all.yml
+++ b/.github/workflows/ci-nx-all.yml
@@ -45,7 +45,7 @@ jobs:
         run: npx nx workspace-lint
 
       - name: Nx Format Check
-        run: npx nx format:check
+        run: npx nx format:check .
 
       - name: Lint
         run: npx nx run-many --target=lint --parallel=3
