--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -55,7 +55,7 @@ jobs:
         run: npx nx workspace-lint
 
       - name: Nx Format Check
-        run: npx nx format:check
+        run: npx nx format:check .
 
       - name: Lint
         run: npx nx affected --target=lint --parallel=3
