--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -54,8 +54,8 @@ jobs:
       - name: Nx Workspace Lint
         run: npx nx workspace-lint
 
-      - name: Nx Format Check
-        run: npx nx format:check .
+      - name: Format Check
+        run: npx prettier --check .
 
       - name: Lint
         run: npx nx affected --target=lint --parallel=3
