--- a/.github/workflows/ci-nx-all.yml
+++ b/.github/workflows/ci-nx-all.yml
@@ -44,8 +44,8 @@ jobs:
       - name: Nx Workspace Lint
         run: npx nx workspace-lint
 
-      - name: Nx Format Check
-        run: npx nx format:check .
+      - name: Format Check
+        run: npx prettier --check .
 
       - name: Lint
         run: npx nx run-many --target=lint --parallel=3
