--- a/packages/amplication-build-manager/.env
+++ b/packages/amplication-build-manager/.env
@@ -1,18 +1,16 @@
 PORT=5010
 
 # Kafka
-KAFKA_BROKERS="["localhost:9092"]"
+KAFKA_BROKERS="localhost:9092"
 KAFKA_CLIENT_ID='build-manager'
 KAFKA_GROUP_ID='build-manager'
 
 # Kafka Topics
-CREATE_PR_REQUEST_TOPIC="internal.create-pr.request.0"
+CODE_GENERATION_REQUEST_TOPIC="build.internal.code-generation.request.1"
+CODE_GENERATION_SUCCESS_TOPIC="build.internal.code-generation.success.1"
+CODE_GENERATION_FAILURE_TOPIC="build.internal.code-generation.failure.1"
 
-CODE_GENERATION_REQUEST_TOPIC="internal.code-generation.request.0"
-CODE_GENERATION_SUCCESS_TOPIC="internal.code-generation.success.0"
-CODE_GENERATION_FAILURE_TOPIC="internal.code-generation.failure.0"
-
-DSG_LOG_TOPIC="internal.dsg-log.0"
+DSG_LOG_TOPIC="build.internal.dsg-log.1"
 
 DSG_RUNNER_URL="http://localhost:12000/example"
 
