--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -12,7 +12,7 @@
     "@amplication/plugin-db-postgres": "^1.0.3",
     "@babel/parser": "7.14.7",
     "@extra-set/difference": "2.2.4",
-    "axios": "^1.1.3",
+    "axios": "0.27.0",
     "camel-case": "4.1.2",
     "fast-glob": "3.2.10",
     "lodash": "4.17.21",
