--- a/package.json
+++ b/package.json
@@ -121,10 +121,7 @@
     "@nrwl/web": "^14.8.2",
     "@nrwl/workspace": "^14.8.2",
     "@nx-tools/nx-docker": "^3.0.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/react": "13.3.0",
     "@types/adm-zip": "^0.4.34",
     "@types/bcrypt": "^5.0.0",
     "@types/cron": "^1.7.3",
@@ -151,8 +148,8 @@
     "@types/prettier": "^2.7.1",
     "@types/query-string": "^6.3.0",
     "@types/rc": "^1.2.1",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.2",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@types/react-transition-group": "^4.4.2",
     "@types/semver": "^7.3.9",
     "@types/supertest": "^2.0.12",
@@ -186,10 +183,11 @@
     "nx": "^14.8.2",
     "prettier": "^2.7.1",
     "prisma": "^3.15.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-test-renderer": "17.0.2",
-    "react-transition-group": "4.4.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
+    "react-transition-group": "^4.4.2",
     "semver": "^7.3.7",
     "source-map-support": "^0.5.21",
     "supertest": "^4.0.2",
