Apollo Client initialized

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "npx nx format --write"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@apollo/gateway": "^0.42.3",
     "@codebrew/nestjs-storage": "^0.1.7",
     "@extra-set/difference": "^2.2.11",
@@ -89,6 +90,7 @@
     "prisma-schema-dsl": "^1.1.5",
     "query-string": "^7.1.1",
     "rc": "^1.2.8",
+    "react-router-dom": "^5.3.4",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rimraf": "^3.0.2",
@@ -150,6 +152,7 @@
     "@types/rc": "^1.2.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.2",
     "@types/semver": "^7.3.9",
     "@types/supertest": "^2.0.12",
