--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "prisma-schema-dsl": "^1.1.5",
     "query-string": "^7.1.1",
     "rc": "^1.2.8",
+    "react-query": "^3.39.2",
     "react-router-dom": "^5.3.4",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
