WIP: Eliminate errors

--- a/packages/amplication-client/tsconfig.json
+++ b/packages/amplication-client/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "allowJs": true,
+    "lib": ["es2021", "es2017", "dom"],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true
