--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@google-cloud/secret-manager": "^3.12.0",
     "@google-cloud/storage": "^5.20.5",
     "@google-cloud/trace-agent": "^5.1.6",
+    "@monaco-editor/react": "^4.4.6",
     "@mui/base": "^5.0.0-alpha.92",
     "@mui/lab": "^5.0.0-alpha.107",
     "@mui/material": "^5.9.3",
@@ -45,7 +46,7 @@
     "@octokit/webhooks": "^9.26.0",
     "@octokit/webhooks-types": "^5.8.0",
     "@primer/octicons-react": "^16.3.1",
-    "@primer/react": "^34.7.1",
+    "@primer/react": "^35.14.1",
     "@prisma/client": "^3.15.2",
     "@sendgrid/mail": "^7.7.0",
     "@slynova/flydrive": "^1.0.3",
@@ -53,10 +54,12 @@
     "@swc/core": "^1.3.11",
     "adm-zip": "^0.5.9",
     "ajv": "^6.12.6",
+    "ajv-errors": "^1.0.1",
     "analytics-node": "^4.0.1",
     "apollo-server-express": "^3.10.2",
     "ast-types": "^0.14.2",
     "bcrypt": "^5.0.1",
+    "chalk": "^2.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "classnames": "^2.3.2",
@@ -65,6 +68,8 @@
     "cronstrue": "^1.125.0",
     "cuid": "^2.1.8",
     "date-fns": "^2.29.3",
+    "deepdash": "^5.3.9",
+    "deepdash-es": "^5.3.9",
     "dir-compare": "^4.0.0",
     "dockerode": "^3.3.4",
     "dotenv": "^16.0.0",
@@ -100,20 +105,33 @@
     "query-string": "^7.1.1",
     "rc": "^1.2.8",
     "react-animate-height": "^3.0.4",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-command-palette": "^0.21.1",
     "react-device-detect": "^2.2.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-draggable": "^4.4.5",
+    "react-helmet": "^6.1.0",
+    "react-hotkeys": "^2.0.0",
+    "react-lazylog": "^4.5.3",
     "react-query": "^3.39.2",
     "react-router-dom": "^5.3.4",
     "react-select": "^5.6.0",
+    "react-teleporter": "^3.0.2",
+    "react-tracking": "^9.2.1",
     "react-use-localstorage": "^3.5.3",
+    "react-xarrows": "^1.7.2",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rimraf": "^3.0.2",
+    "rooks": "^7.4.2",
     "rxjs": "^7.5.7",
     "simple-git": "^3.14.1",
     "swagger-ui-express": "^4.5.0",
     "tar-stream": "^2.2.0",
     "ts-morph": "^13.0.3",
     "tslib": "^2.3.0",
+    "use-debounce": "^3.4.3",
     "uuid": "^8.3.2",
     "winston": "3.8.2",
     "winston-cloud-logging": "^1.0.2",
@@ -167,6 +185,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-tracking": "^8.1.3",
     "@types/react-transition-group": "^4.4.2",
     "@types/semver": "^7.3.9",
     "@types/supertest": "^2.0.12",
