--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "@apollo/client": "^3.7.1",
     "@apollo/gateway": "^0.42.3",
     "@codebrew/nestjs-storage": "^0.1.7",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@extra-set/difference": "^2.2.11",
     "@google-cloud/cloudbuild": "^2.6.0",
     "@google-cloud/secret-manager": "^3.12.0",
     "@google-cloud/storage": "^5.20.5",
     "@google-cloud/trace-agent": "^5.1.6",
     "@monaco-editor/react": "^4.4.6",
-    "@mui/base": "^5.0.0-alpha.92",
     "@mui/lab": "^5.0.0-alpha.107",
-    "@mui/material": "^5.9.3",
+    "@mui/material": "^5.10.13",
     "@mui/system": "^5.10.7",
     "@nestjs/common": "^8.4.7",
     "@nestjs/config": "^1.2.1",
@@ -127,6 +128,7 @@
     "rooks": "^7.4.2",
     "rxjs": "^7.5.7",
     "simple-git": "^3.14.1",
+    "skeleton-screen-css": "^1.1.0",
     "swagger-ui-express": "^4.5.0",
     "tar-stream": "^2.2.0",
     "ts-morph": "^13.0.3",
@@ -217,6 +219,7 @@
     "normalize-path": "^3.0.0",
     "npm-run-all": "^4.1.5",
     "nx": "^14.8.2",
+    "path-browserify": "^1.0.1",
     "prettier": "^2.7.1",
     "prisma": "^3.15.2",
     "react": "^18.2.0",
