--- a/helm/charts/dsg-runner-infra/templates/sensor.yaml
+++ b/helm/charts/dsg-runner-infra/templates/sensor.yaml
@@ -45,6 +45,7 @@ spec:
                           - name: persistent-storage
                             mountPath: /efs
                             subPathExpr: $(BUILD_ID)
+                    imagePullPolicy: Always
                     volumes:
                       - name: persistent-storage
                         persistentVolumeClaim:
