--- a/packages/amplication-client/.env
+++ b/packages/amplication-client/.env
@@ -6,6 +6,6 @@ NX_REACT_APP_FEATURE_FLAGS="{}"
 #NX_REACT_APP_AMPLITUDE_API_KEY=aVqxCAcXOdCx5DPI41s6EmwsSCB8Kjz6
 # NX_REACT_APP_GITHUB_CLIENT_ID=2e4a744d73ea633fd615
 
-NX_REACT_APP_DATA_SOURCE="/graphql"
+NX_REACT_APP_DATA_SOURCE="http://localhost:3000/graphql"
 NX_REACT_APP_STORAGE_GATEWAY_URL="http://localhost:3002"
 NX_REACT_APP_SERVER_URI=""
