Fix primer button by using deprecated Button

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -42,6 +42,9 @@
       "@amplication/prisma-db/*": ["packages/amplication-prisma-db/src/*"],
       "@primer/react-deprecated": [
         "node_modules/@primer/react/lib/deprecated/index.js"
+      ],
+      "@primer/react-deprecated/Button": [
+        "node_modules/@primer/react/lib/deprecated/Button/Button"
       ]
     }
   },
