--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -40,9 +40,7 @@
       ],
       "@amplication/prisma-db": ["packages/amplication-prisma-db/src/index.ts"],
       "@amplication/prisma-db/*": ["packages/amplication-prisma-db/src/*"],
-      "@primer/react-deprecated": [
-        "node_modules/@primer/react/lib/deprecated/index.js"
-      ],
+      /** This is required by the Amplication Client for as long as we are using a deprecated version of Primer React **/
       "@primer/react-deprecated/Button": [
         "node_modules/@primer/react/lib/deprecated/Button/Button"
       ],
