--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -41,21 +41,7 @@
       "@amplication/prisma-db": ["packages/amplication-prisma-db/src/index.ts"],
       "@amplication/prisma-db/*": ["packages/amplication-prisma-db/src/*"],
       /** This is required by the Amplication Client for as long as we are using a deprecated version of Primer React **/
-      "@primer/react-deprecated/Button": [
-        "node_modules/@primer/react/lib/deprecated/Button/Button"
-      ],
-      "@primer/react-deprecated/SelectMenu": [
-        "node_modules/@primer/react/lib/deprecated/SelectMenu/SelectMenu"
-      ],
-      "@primer/react-deprecated/SelectMenuModal": [
-        "node_modules/@primer/react/lib/deprecated/SelectMenu/SelectMenu"
-      ],
-      "@primer/react-deprecated/SelectMenuList": [
-        "node_modules/@primer/react/lib/deprecated/SelectMenu/SelectMenu"
-      ],
-      "@primer/react-deprecated/SelectMenuItem": [
-        "node_modules/@primer/react/lib/deprecated/SelectMenu/SelectMenu"
-      ]
+      "@primer/react-deprecated": ["node_modules/@primer/react/lib/deprecated"]
     }
   },
   "ts-node": {
