--- a/packages/amplication-client/project.json
+++ b/packages/amplication-client/project.json
@@ -11,14 +11,18 @@
       "options": {
         "compiler": "babel",
         "outputPath": "dist/packages/amplication-client",
-        "index": "packages/amplication-client/src/index.html",
+        "index": "packages/amplication-client/public/index.html",
         "baseHref": "/",
         "main": "packages/amplication-client/src/index.tsx",
         "polyfills": "packages/amplication-client/src/polyfills.ts",
         "tsConfig": "packages/amplication-client/tsconfig.app.json",
         "assets": [
-          "packages/amplication-client/src/favicon.ico",
           "packages/amplication-client/src/assets",
+          {
+            "glob": "**/*",
+            "input": "packages/amplication-client/public",
+            "output": "./"
+          },
           {
             "glob": "scripts/entrypoint.sh",
             "input": "packages/amplication-client",
