--- a/helm/charts/amplication/values-amit.yaml
+++ b/helm/charts/amplication/values-amit.yaml
@@ -22,10 +22,10 @@ amplication-client:
     hostname: app-amit.amplication-dev.com
   config:
     env:
-      REACT_APP_SERVER_URI: "https://server-amit.amplication-dev.com"
-      REACT_APP_DATA_SOURCE: "https://server-amit.amplication-dev.com/graphql"
-      REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server-amit.amplication-dev.com/github"
-      REACT_APP_STORAGE_GATEWAY_URL: https://server-amit.amplication-dev.com
+      NX_REACT_APP_SERVER_URI: "https://server-amit.amplication-dev.com"
+      NX_REACT_APP_DATA_SOURCE: "https://server-amit.amplication-dev.com/graphql"
+      NX_REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server-amit.amplication-dev.com/github"
+      NX_REACT_APP_STORAGE_GATEWAY_URL: https://server-amit.amplication-dev.com
 
 amplication-server:
   ingress:
