--- a/helm/charts/amplication/values-ariel.yaml
+++ b/helm/charts/amplication/values-ariel.yaml
@@ -9,10 +9,10 @@ amplication-client:
     hostname: app-ariel.amplication-dev.com
   config:
     env:
-      REACT_APP_SERVER_URI: 'https://server-ariel.amplication-dev.com'
-      REACT_APP_DATA_SOURCE: 'https://server-ariel.amplication-dev.com/graphql'
-      REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: 'https://server-ariel.amplication-dev.com/github'
-      REACT_APP_STORAGE_GATEWAY_URL: https://server-ariel.amplication-dev.com
+      NX_REACT_APP_SERVER_URI: 'https://server-ariel.amplication-dev.com'
+      NX_REACT_APP_DATA_SOURCE: 'https://server-ariel.amplication-dev.com/graphql'
+      NX_REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: 'https://server-ariel.amplication-dev.com/github'
+      NX_REACT_APP_STORAGE_GATEWAY_URL: https://server-ariel.amplication-dev.com
 
 amplication-server:
   ingress:
