--- a/helm/charts/amplication/values-eugene.yaml
+++ b/helm/charts/amplication/values-eugene.yaml
@@ -26,10 +26,10 @@ amplication-client:
     hostname: app-eugene.amplication-dev.com
   config:
     env:
-      REACT_APP_SERVER_URI: "https://server-eugene.amplication-dev.com"
-      REACT_APP_DATA_SOURCE: "https://server-eugene.amplication-dev.com/graphql"
-      REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server-eugene.amplication-dev.com/github"
-      REACT_APP_STORAGE_GATEWAY_URL: https://server-eugene.amplication-dev.com
+      NX_REACT_APP_SERVER_URI: "https://server-eugene.amplication-dev.com"
+      NX_REACT_APP_DATA_SOURCE: "https://server-eugene.amplication-dev.com/graphql"
+      NX_REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server-eugene.amplication-dev.com/github"
+      NX_REACT_APP_STORAGE_GATEWAY_URL: https://server-eugene.amplication-dev.com
 
 amplication-server:
   autoscaling:
