--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -20,12 +20,12 @@ amplication-client:
     certificatearn: arn:aws:acm:us-east-1:407256539111:certificate/7cf536df-6c61-4f76-bf3c-fd8f4e021721
   config:
     env:
-      REACT_APP_SERVER_URI: "https://server.amplication.com"
-      REACT_APP_DATA_SOURCE: "https://server.amplication.com/graphql"
-      REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server.amplication.com/github"
-      REACT_APP_PADDLE_VENDOR_ID: "131992"
-      REACT_APP_FEATURE_FLAGS: '{"SHOW_DEPLOYER":true}'
-      REACT_APP_STORAGE_GATEWAY_URL: https://server.amplication.com
+      NX_REACT_APP_SERVER_URI: "https://server.amplication.com"
+      NX_REACT_APP_DATA_SOURCE: "https://server.amplication.com/graphql"
+      NX_REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server.amplication.com/github"
+      NX_REACT_APP_PADDLE_VENDOR_ID: "131992"
+      NX_REACT_APP_FEATURE_FLAGS: '{"SHOW_DEPLOYER":true}'
+      NX_REACT_APP_STORAGE_GATEWAY_URL: https://server.amplication.com
 
 amplication-server:
   autoscaling:
