--- a/.github/workflows/ci-nx-all.yml
+++ b/.github/workflows/ci-nx-all.yml
@@ -103,16 +103,31 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
 
-      - name: Configure AWS credentials
+      - name: Configure AWS Credentials (Management Account)
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Login to Amazon ECR
-        id: login-ecr
+      - name: Login to Amazon ECR (Management Account)
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          registries: "439403303254"
+
+      - name: Configure AWS Credentials (Old Account)
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+          role-to-assume: arn:aws:iam::407256539111:role/ECRFullAccessRole
+          role-session-name: old-account-ecr-access
+
+      - name: Login to Amazon ECR (Old Account)
+        uses: aws-actions/amazon-ecr-login@v1
+        with:
+          registries: "407256539111"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -122,7 +137,10 @@ jobs:
         uses: docker/metadata-action@v4
         id: meta
         with:
-          images: "407256539111.dkr.ecr.us-east-1.amazonaws.com/${{ matrix.project }}"
+          # Temporarily publish the image to both accounts' ECR registry until we fully migrate
+          images: |
+            "439403303254.dkr.ecr.us-east-1.amazonaws.com/${{ matrix.project }}"
+            "407256539111.dkr.ecr.us-east-1.amazonaws.com/${{ matrix.project }}"
           tags: |
             type=sha,prefix=sha-
             type=ref,event=branch
