--- a/.github/workflows/ci-nx-all.yml
+++ b/.github/workflows/ci-nx-all.yml
@@ -115,13 +115,8 @@ jobs:
         with:
           registries: "439403303254"
 
-      - name: Configure AWS Credentials (Old Account)
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-          role-to-assume: arn:aws:iam::407256539111:role/ECRFullAccessRole
+      - name: AWS Assume Role (Old Account)
+        run: aws sts assume-role --role-session-name old-account-ecr-access --role-arn arn:aws:iam::407256539111:role/ECRFullAccessRole
 
       - name: Login to Amazon ECR (Old Account)
         uses: aws-actions/amazon-ecr-login@v1
