--- a/.github/workflows/ci-nx-all.yml
+++ b/.github/workflows/ci-nx-all.yml
@@ -49,7 +49,7 @@ jobs:
         run: npx nx workspace-lint
 
       - name: Format Check
-        run: npx prettier --check .
+        run: npm run check-format
 
       - name: Lint
         run: npx nx run-many --target=lint --parallel=3
