Fix formatting and set client port to 3001

--- a/packages/amplication-client/project.json
+++ b/packages/amplication-client/project.json
@@ -70,7 +70,9 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "amplication-client:build",
-        "hmr": true
+        "hmr": true,
+        "open": true,
+        "port": 3001
       },
       "configurations": {
         "development": {
