Use next tag in next env

--- a/helm/charts/dsg-runner-infra/charts/amplication-build-manager/values.yaml
+++ b/helm/charts/dsg-runner-infra/charts/amplication-build-manager/values.yaml
@@ -11,7 +11,7 @@ autoscaling:
 image:
   pullPolicy: Always
   repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-build-manager
-  tag: fs-structure
+  tag: next
   imagePullSecrets: []
 
 podAnnotations:
