--- a/.github/workflows/ci-nx-all.yml
+++ b/.github/workflows/ci-nx-all.yml
@@ -62,12 +62,10 @@ jobs:
           npx nx run-many --target=prebuild --parallel=3
           npx nx run-many --target=build --parallel=3
           npx nx run-many --target=postbuild --parallel=3
-
       - name: Set Affected
         id: set-affected
         run: |
           echo ::set-output name=affected::"$(npx nx print-affected --all --type=app | jq -c .projects)"
-
   dockerize:
     name: Dockerize
     runs-on: ubuntu-latest
@@ -103,16 +101,29 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
 
-      - name: Configure AWS credentials
+      - name: Configure AWS Credentials (Management Account)
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Login to Amazon ECR
-        id: login-ecr
+      - name: Login to Amazon ECR (Management Account)
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          registries: "439403303254"
+
+      - name: AWS Assume Role (Old Account)
+        uses: youyo/awscredswrap@v1
+        with:
+          role_arn: "arn:aws:iam::407256539111:role/ECRFullAccessRole"
+          duration_seconds: 3600
+          role_session_name: "old-account-ecr-access"
+
+      - name: Login to Amazon ECR (Old Account)
+        uses: aws-actions/amazon-ecr-login@v1
+        with:
+          registries: "407256539111"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -122,14 +133,16 @@ jobs:
         uses: docker/metadata-action@v4
         id: meta
         with:
-          images: "407256539111.dkr.ecr.us-east-1.amazonaws.com/${{ matrix.project }}"
+          # Temporarily publish the image to both accounts' ECR registry until we fully migrate
+          images: |
+            "439403303254.dkr.ecr.us-east-1.amazonaws.com/${{ matrix.project }}"
+            "407256539111.dkr.ecr.us-east-1.amazonaws.com/${{ matrix.project }}"
           tags: |
             type=sha,prefix=sha-
             type=ref,event=branch
             type=ref,event=pr,prefix=pr-
             type=ref,event=tag,prefix=tag-
             type=raw,value=${{ github.run_id }},prefix=gh-
-
       - name: Dockerize
         run: npx nx run-many --target docker:build --projects=${{ matrix.project }}
         env:
