Fix formatting in CI

--- a/.github/workflows/ci-nx-all.yml
+++ b/.github/workflows/ci-nx-all.yml
@@ -48,8 +48,8 @@ jobs:
       - name: Nx Workspace Lint
         run: npx nx workspace-lint
 
-      # - name: Nx Format Check
-      #   run: npx nx format:check
+      - name: Nx Format Check
+        run: npm run format:check
 
       - name: Lint
         run: npx nx run-many --target=lint --parallel=3
