--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -58,8 +58,8 @@ jobs:
       - name: Nx Workspace Lint
         run: npx nx workspace-lint
 
-      # - name: Nx Format Check
-      #   run: npx nx format:check
+      - name: Nx Format Check
+        run: npm run format:check
 
       - name: Lint
         run: npx nx affected --target=lint --parallel=3
