correct remote env name and value

--- a/helm/charts/dsg-runner-infra/templates/sensor.yaml
+++ b/helm/charts/dsg-runner-infra/templates/sensor.yaml
@@ -41,8 +41,8 @@ spec:
                             value: null # provided in parameters
                           - name: BUILD_MANAGER_URL
                             value: http://amplication-build-manager
-                          - name: REMOTE_NEV
-                            value: true
+                          - name: REMOTE_ENV
+                            value: "true"
                         volumeMounts:
                           - name: persistent-storage
                             mountPath: /efs
