--- a/helm/charts/amplication/values-next.yaml
+++ b/helm/charts/amplication/values-next.yaml
@@ -118,6 +118,9 @@ amplication-git-pull-service:
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
 
 amplication-git-pull-request-service:
+  autoscaling:
+    minReplicas: 4
+    maxReplicas: 12
   config:
     env:
       KAFKA_BROKERS: "amplication-next-cp-kafka-headless:9092"
